bdr.BDR2.scala.error
Erreur de compilation :
BDR2:4: error: not found: value lireMessage
  lireMessage() match {
  ^